--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -1,7 +1,7 @@
 # The delay before the scheduled tasks start executing
-delay=60000000
+delay=600000
 # The period between notifications for timed tasks
-period=6000000
+period=600000
 
 # The number of threads for each indexing component
 table.handler.threads=3
@@ -15,4 +15,6 @@ monitoring.service.port=8082
 web.service.path=/ikube/service/ISearcherWebService?wsdl
 monitoring.service.path=/ikube/service/IMonitoringService?wsdl
 
-ikube.url=http://localhost:9000/ikube/index.html
+ikube.url=http://localhost/ikube/index.html
+
+ikube.internal.index.path=./ikube
