Updated the configuration.
git-svn-id: http://ikube.googlecode.com/svn/trunk@434 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -1,7 +1,7 @@
 # The delay before the scheduled tasks start executing
-delay=600000
+delay=1800000
 # The period between notifications for timed tasks
-period=600000
+period=1800000
 
 # The number of threads for each indexing component
 table.handler.threads=3
@@ -17,4 +17,4 @@ monitoring.service.path=/ikube/service/IMonitoringService?wsdl
 
 ikube.url=http://localhost/ikube/index.html
 
-ikube.internal.index.path=./ikube
+ikube.internal.index.path=D:/cluster/indexes
