Updated some tests for the integration server.
git-svn-id: http://ikube.googlecode.com/svn/trunk@436 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -10,7 +10,7 @@ max.read.length=10000000
 index.directory.path=D:/cluster/indexes
 index.directory.path.backup=D:/cluster/indexes/backup
 
-url=http://ikube.ikube.cloudbees.net/index.html
+url=http://ikokoon.ikube.cloudbees.net/index.html
 url.million=http://localhost/million/adapt.html
 faq.predicate=where faq.faqid < 100000000 and published = 1
 patient.predicate=where patient.id > 0
