--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -1,7 +1,7 @@
 # The delay before the scheduled tasks start executing
-delay=1800000
+delay=600000
 # The period between notifications for timed tasks
-period=1800000
+period=600000
 
 # The number of threads for each indexing component
 table.handler.threads=3
