--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -12,7 +12,7 @@ index.directory.path.backup=D:/cluster/indexes/backup
 
 url=http://ikokoon.ikube.cloudbees.net/index.html
 url.million=http://localhost/million/adapt.html
-faq.predicate=where faq.faqid < 100000000 and published = 1
+faq.predicate=where faq.faqid < 100000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=D:/apache-tomcat-6.0.26
