Updated the internet crawler. Updated the cache to be used again in the crawler. Did some modification and re-factoring to the crawler. A whole bunch of stuff really...
git-svn-id: http://ikube.googlecode.com/svn/trunk@440 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -16,3 +16,4 @@ web.service.path=/ikube/service/ISearcherWebService?wsdl
 monitoring.service.path=/ikube/service/IMonitoringService?wsdl
 
 ikube.url=http://localhost/ikube/index.html
+ikube.url.9000=http://localhost:9000/ikube/index.html
