--- a/code/war/src/main/webapp/WEB-INF/web.xml
+++ b/code/war/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@
 	</context-param>
 
 	<servlet>
-		<servlet-name>tiles</servlet-name>
+		<servlet-name>core</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
@@ -43,7 +43,7 @@
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>tiles</servlet-name>
+		<servlet-name>core</servlet-name>
 		<url-pattern>*.html</url-pattern>
 	</servlet-mapping>
 
