--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -19,6 +19,7 @@
 
 	<properties>
 		<main.class>ikube.Ikube</main.class>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<build>
