Updated some classes and enhanced the indexable table handler.
git-svn-id: http://ikube.googlecode.com/svn/trunk@450 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -1,10 +1,10 @@
 # The delay before the scheduled tasks start executing
-delay=60000
+delay=10000
 # The period between notifications for timed tasks
-period=60000
+period=10000
 
 # The number of threads for each indexing component
-table.handler.threads=5
+table.handler.threads=1
 internet.handler.threads=1
 filesystem.handler.threads=1
 email.handler.threads=1
@@ -16,6 +16,7 @@ web.service.path=/ikube/service/ISearcherWebService?wsdl
 monitoring.service.path=/ikube/service/IMonitoringService?wsdl
 
 ikube.url=http://localhost/ikube/index.html
+ikube.url.8080=http://localhost/ikube/index.html
 ikube.url.9000=http://localhost:9000/ikube/index.html
 
 not.stored=false
