--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,7 @@ target.directory=code/war/target
 core.target.directory=code/core/target
 
 cluster.directory=D:/cluster
+indexes.directory=${cluster.directory}/indexes
 
 tomcat.1=${cluster.directory}/apache-tomcat-6.0.29-1
 tomcat.2=${cluster.directory}/apache-tomcat-6.0.29-2
