--- a/build.xml
+++ b/build.xml
@@ -3,22 +3,30 @@
 	<property file="build.properties" />
 	<property name="ikube.war" value="ikube.war" />
 
+	<target name="all">
+		<antcall target="deploy" />
+		<antcall target="start" />
+	</target>
+
 	<target name="start">
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.1.bin}" />
 			<param name="tomcat.home" value="${tomcat.1}" />
 		</antcall>
+		<sleep seconds="10" />
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.2.bin}" />
 			<param name="tomcat.home" value="${tomcat.2}" />
 		</antcall>
+		<sleep seconds="10" />
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.3.bin}" />
 			<param name="tomcat.home" value="${tomcat.3}" />
 		</antcall>
+		<sleep seconds="10" />
 	</target>
 	<target name="stop">
 		<antcall target="executeTomcatAction">
@@ -46,7 +54,8 @@
 		</java>
 	</target>
 
-	<target name="deploy.ikube">
+	<target name="deploy">
+		<delete dir="${indexes.directory}" failonerror="false" />
 		<delete dir="${tomcat.1}/webapps/ikube" failonerror="false" />
 		<delete dir="${tomcat.2}/webapps/ikube" failonerror="false" />
 		<delete dir="${tomcat.3}/webapps/ikube" failonerror="false" />
