--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -3,8 +3,8 @@ max.age=36000000
 
 buffer.size=128
 compound.file=true
-merge.factor=100
-buffered.docs=100
+merge.factor=1000
+buffered.docs=1000
 max.field.length=10000
 max.read.length=10000000
 index.directory.path=D:/cluster/indexes
@@ -12,7 +12,7 @@ index.directory.path.backup=D:/cluster/indexes/backup
 
 url=http://ikokoon.ikube.cloudbees.net/index.html
 url.million=http://localhost/million/adapt.html
-faq.predicate=where faq.faqid < 100000 and published = 1
+faq.predicate=where faq.faqid < 100000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=D:/apache-tomcat-6.0.26
