Updated the UI and added a disk full action to exit if there isn't much space left.
git-svn-id: http://ikube.googlecode.com/svn/trunk@456 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.xml
+++ b/build.xml
@@ -55,7 +55,7 @@
 	</target>
 
 	<target name="deploy">
-		<delete dir="${indexes.directory}" failonerror="false" />
+		<!-- delete dir="${indexes.directory}" failonerror="false" / -->
 		<delete dir="${tomcat.1}/webapps/ikube" failonerror="false" />
 		<delete dir="${tomcat.2}/webapps/ikube" failonerror="false" />
 		<delete dir="${tomcat.3}/webapps/ikube" failonerror="false" />
