Updated the JavaDoc and some documentation. Fiddled a bit with some tests.
git-svn-id: http://ikube.googlecode.com/svn/trunk@457 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -1,6 +1,9 @@
+## This file should be modified by clients ##
+
 # Ten hours
 max.age=360000000
 
+# These parameters are destined for the index context
 buffer.size=128
 compound.file=true
 merge.factor=1000
@@ -9,16 +12,20 @@ max.field.length=10000
 max.read.length=10000000
 index.directory.path=D:/cluster/indexes
 index.directory.path.backup=D:/cluster/indexes/backup
+jdbc.batch.size=1000
+internet.batch.size=100
+throttle=0
 
+# These parameters are client specific
 url=http://ikokoon.ikube.cloudbees.net/index.html
 url.million=http://localhost/million/adapt.html
 faq.predicate=where faq.faqid < 100000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=D:/apache-tomcat-6.0.26
+files.excluded.pattern=.*(.svn).*|.*(database).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.zip).*|.*(.jar).*|.*(.exe).*|.*(.dll).*|.*(.war).*|.*(.dtd).*|.*(.jsp).*
 
-throttle=0
-
+# These are client specific for Lucene
 analyzed=true
 stored=true
 vectored=true
@@ -30,9 +37,9 @@ jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
 jdbc.numHelperThreads=5
 
-jdbc.batch.size=10000
-internet.batch.size=100
-
+# These parameters are for the production web service
+# executer that will execute searches periodically on the 
+# index defined here 
 searcher.index.name=index
 searcher.field.name=answer
 searcher.fragment=true
@@ -40,5 +47,3 @@ searcher.minimum.results.size=10
 searcher.search.string=answer clinch crackerjack books gall thorough going tall pissed committee greathearted cyborg devotional tremor tuba ikokoon
 searcher.start.index=0
 searcher.end.index=101
-
-files.excluded.pattern=.*(.svn).*|.*(database).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.zip).*|.*(.jar).*|.*(.exe).*|.*(.dll).*|.*(.war).*|.*(.dtd).*|.*(.jsp).*
