--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -1,20 +1,24 @@
+## This file should not be modified by clients generally ##
+
 # The delay before the scheduled tasks start executing
 delay=60000
 # The period between notifications for timed tasks
 period=60000
 
 # The number of threads for each indexing component
-table.handler.threads=6
-internet.handler.threads=1
-filesystem.handler.threads=1
-email.handler.threads=1
+table.handler.threads=3
+internet.handler.threads=10
+filesystem.handler.threads=3
+email.handler.threads=3
 
+# These parameters are for the web services
 service.protocol=http
 service.port=8081
 monitoring.service.port=8082
 web.service.path=/ikube/service/ISearcherWebService?wsdl
 monitoring.service.path=/ikube/service/IMonitoringService?wsdl
 
+# These parameters are for the Ikube documentation index
 ikube.url=http://localhost/ikube/index.html
 ikube.url.8080=http://localhost/ikube/index.html
 ikube.url.9000=http://localhost:9000/ikube/index.html
