Did some re-factoring and finished the documentation.
git-svn-id: http://ikube.googlecode.com/svn/trunk@458 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -1,7 +1,7 @@
 ## This file should be modified by clients ##
 
-# Ten hours
-max.age=360000000
+# Ten hours, defined in minutes
+max.age=6000
 
 # These parameters are destined for the index context
 buffer.size=128
@@ -12,7 +12,7 @@ max.field.length=10000
 max.read.length=10000000
 index.directory.path=D:/cluster/indexes
 index.directory.path.backup=D:/cluster/indexes/backup
-jdbc.batch.size=1000
+jdbc.batch.size=10000
 internet.batch.size=100
 throttle=0
 
@@ -31,19 +31,8 @@ stored=true
 vectored=true
 
 #General JDBC settings
-jdbc.minPoolSize=1
-jdbc.maxPoolSize=10
-jdbc.maxStatements=1000
+jdbc.minPoolSize=10
+jdbc.maxPoolSize=100
+jdbc.maxStatements=10000
 jdbc.checkOutTimeout=360000000
 jdbc.numHelperThreads=5
-
-# These parameters are for the production web service
-# executer that will execute searches periodically on the 
-# index defined here 
-searcher.index.name=index
-searcher.field.name=answer
-searcher.fragment=true
-searcher.minimum.results.size=10
-searcher.search.string=answer clinch crackerjack books gall thorough going tall pissed committee greathearted cyborg devotional tremor tuba ikokoon
-searcher.start.index=0
-searcher.end.index=101
