--- a/code/core/src/main/resources/META-INF/common/integration/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/integration/spring.properties
@@ -1,13 +1,16 @@
-searcher.index.name=index
-searcher.field.name=answer
-searcher.fragment=true
+# These parameters are for the production web service
+# executer that will execute searches periodically on the 
+# index defined here 
+searcher.index.name=geospatial
+searcher.fragment=false
 searcher.minimum.results.size=10
-searcher.search.string=answer clinch crackerjack books gall thorough going tall pissed committee greathearted cyborg devotional tremor tuba ikokoon
+searcher.search.string=cape town
 searcher.start.index=0
-searcher.end.index=101
+searcher.end.index=10
+searcher.iterations=100
 
 # Eventually we want to set this to about 10 milliseconds and
 # verify that the open close and index actions do not interrupt
 # the search operations and clients
-web.service.delay=300000
-web.service.period=300000
+web.service.delay=60000
+web.service.period=60000
