--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -6,7 +6,7 @@ delay=60000
 period=60000
 
 # The number of threads for each indexing component
-table.handler.threads=3
+table.handler.threads=5
 internet.handler.threads=10
 filesystem.handler.threads=3
 email.handler.threads=3
@@ -16,11 +16,12 @@ service.protocol=http
 service.port=8081
 monitoring.service.port=8082
 web.service.path=/ikube/service/ISearcherWebService?wsdl
-monitoring.service.path=/ikube/service/IMonitoringService?wsdl
+monitoring.service.path=/ikube/service/IMonitorWebService?wsdl
 
 # These parameters are for the Ikube documentation index
 ikube.url=http://localhost/ikube/index.html
-ikube.url.8080=http://localhost/ikube/index.html
+ikube.url.8080=http://localhost:8080/ikube
 ikube.url.9000=http://localhost:9000/ikube/index.html
+ikube.url.dyndns=http://ikube.dyndns.org:8080/ikube/index.html
 
 not.stored=false
