--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
 			<param name="tomcat.bin" value="${tomcat.1.bin}" />
 			<param name="tomcat.home" value="${tomcat.1}" />
 		</antcall>
-		<sleep seconds="10" />
+		<!-- sleep seconds="10" />
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.2.bin}" />
@@ -26,7 +26,7 @@
 			<param name="tomcat.bin" value="${tomcat.3.bin}" />
 			<param name="tomcat.home" value="${tomcat.3}" />
 		</antcall>
-		<sleep seconds="10" />
+		<sleep seconds="10" / -->
 	</target>
 	<target name="stop">
 		<antcall target="executeTomcatAction">
