--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,9 @@
 				<version>2.0-beta-2</version>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-install-plugin</artifactId>
+				<version>2.3</version>
 				<executions>
 					<execution>
 						<id>install-canyon</id>
