Added the deploy goal to the war pom as the ant build script didn't find the war to deploy.
git-svn-id: http://ikube.googlecode.com/svn/trunk@464 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,7 @@
 project.directory=.
 project.name=ikube
-project.version=1.0
+project.version=1.8
+ikube.war=ikube.war
 
 target.directory=code/war/target
 core.target.directory=code/core/target
