--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,6 @@
 <project name="Deploy Ikube Cluster" default="start">
 
 	<property file="build.properties" />
-	<property name="ikube.war" value="ikube.war" />
 
 	<target name="all">
 		<antcall target="deploy" />
@@ -55,7 +54,7 @@
 	</target>
 
 	<target name="deploy">
-		<delete dir="${indexes.directory}" failonerror="false" />
+		<!-- delete dir="${indexes.directory}" failonerror="false" / -->
 		<delete dir="${tomcat.1}/webapps/ikube" failonerror="false" />
 		<delete dir="${tomcat.2}/webapps/ikube" failonerror="false" />
 		<delete dir="${tomcat.3}/webapps/ikube" failonerror="false" />
