--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<properties>
 		<targetJdk>1.6</targetJdk>
-		
+
 		<spring.version>3.0.3.RELEASE</spring.version>
 		<tiles.version>2.1.3</tiles.version>
 		<slf4j.version>1.5.10</slf4j.version>
@@ -72,6 +72,24 @@
 					</execution>
 				</configuration>
 			</plugin>
+			<!-- <plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0-alpha-2</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>read-project-properties</goal>
+						</goals>
+						<configuration>
+							<files>
+								<file>build.properties</file>
+							</files>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin> -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jdepend-maven-plugin</artifactId>
@@ -93,7 +111,7 @@
 							<file>libs/canyon-0.9.8.jar</file>
 						</configuration>
 					</execution>
-					
+
 					<execution>
 						<id>install-db2-driver</id>
 						<phase>compile</phase>
@@ -126,21 +144,25 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
 			<version>${spring.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -178,6 +200,13 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 			<version>${spring.version}</version>
@@ -202,21 +231,58 @@
 			<groupId>org.springbyexample</groupId>
 			<artifactId>org.springbyexample.dynamic.tiles2</artifactId>
 			<version>1.2</version>
+			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>org.springframework.beans</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>org.springframework.context</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>org.springframework.context.support</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>org.springframework.core</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>org.springframework.web</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>org.springframework.webflow</artifactId>
+					<groupId>org.springframework.webflow</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>org.springframework.web.servlet</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>org.springframework.js</artifactId>
+					<groupId>org.springframework.webflow</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>com.springsource.org.apache.tiles</artifactId>
+					<groupId>org.apache.tiles</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>com.springsource.org.apache.tiles.core</artifactId>
+					<groupId>org.apache.tiles</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.tiles</groupId>
-			<artifactId>com.springsource.org.apache.tiles</artifactId>
-			<version>${tiles.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tiles</groupId>
-			<artifactId>com.springsource.org.apache.tiles.core</artifactId>
-			<version>${tiles.version}</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.apache.tiles</groupId> <artifactId>com.springsource.org.apache.tiles</artifactId> <version>${tiles.version}</version> 
+			<scope>compile</scope> </dependency> <dependency> <groupId>org.apache.tiles</groupId> <artifactId>com.springsource.org.apache.tiles.core</artifactId> 
+			<version>${tiles.version}</version> <scope>compile</scope> </dependency> -->
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>com.springsource.org.apache.tiles.jsp</artifactId>
 			<version>${tiles.version}</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
@@ -280,13 +346,8 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>aspectj</groupId>
-			<artifactId>aspectjweaver</artifactId>
-			<version>1.5.3</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
+		<!-- <dependency> <groupId>aspectj</groupId> <artifactId>aspectjweaver</artifactId> <version>1.5.3</version> <type>jar</type> <scope>compile</scope> 
+			</dependency> -->
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib-nodep</artifactId>
@@ -370,13 +431,8 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.neodatis.odb</groupId>
-			<artifactId>neodatis-odb</artifactId>
-			<version>1.9.21.679</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
+		<!-- <dependency> <groupId>org.neodatis.odb</groupId> <artifactId>neodatis-odb</artifactId> <version>1.9.21.679</version> <type>jar</type> 
+			<scope>compile</scope> </dependency> -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -508,24 +564,15 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>net.sf.ehcache</groupId>
-			<artifactId>ehcache-openjpa</artifactId>
-			<version>0.2.0</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.neodatis</groupId>
-			<artifactId>neodatis-odb</artifactId>
-			<version>1.9-beta-1</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
+		<!-- <dependency> <groupId>net.sf.ehcache</groupId> <artifactId>ehcache-openjpa</artifactId> <version>0.2.0</version> <type>jar</type> <scope>compile</scope> 
+			</dependency> -->
+		<!-- <dependency> <groupId>org.neodatis</groupId> <artifactId>neodatis-odb</artifactId> <version>1.9-beta-1</version> <type>jar</type> <scope>compile</scope> 
+			</dependency> -->
 		<dependency>
 			<groupId>com.beoui</groupId>
 			<artifactId>geocell</artifactId>
 			<version>0.0.5</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.nfunk</groupId>
@@ -538,16 +585,19 @@
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-spatial</artifactId>
 			<version>3.0.2</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-misc</artifactId>
 			<version>3.0.2</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.el</groupId>
 			<artifactId>com.springsource.org.apache.el</artifactId>
 			<version>6.0.20</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.openjpa</groupId>
@@ -563,16 +613,9 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>it.assist.jrecordbind</groupId>
-			<artifactId>jrecordbind-java5</artifactId>
-			<version>2.3.3</version>
-		</dependency>	
-			<dependency>
-			<groupId>net.sf.flatpack</groupId>
-			<artifactId>flatpack</artifactId>
-			<version>3.1.1</version>
-		</dependency>
+		<!-- <dependency> <groupId>it.assist.jrecordbind</groupId> <artifactId>jrecordbind-java5</artifactId> <version>2.3.3</version> <scope>compile</scope> 
+			</dependency> <dependency> <groupId>net.sf.flatpack</groupId> <artifactId>flatpack</artifactId> <version>3.1.1</version> <scope>compile</scope> 
+			</dependency> -->
 		<dependency>
 			<groupId>canyon</groupId>
 			<artifactId>canyon</artifactId>
@@ -581,10 +624,11 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-            <groupId>com.objectdb</groupId>
-            <artifactId>objectdb</artifactId>
-            <version>2.0.4</version>
-        </dependency>
+			<groupId>com.objectdb</groupId>
+			<artifactId>objectdb</artifactId>
+			<version>2.0.4</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -612,17 +656,8 @@
 			<name>Java.net Maven2 Repository</name>
 			<url>http://download.java.net/maven/2</url>
 		</repository>
-		<repository>
-			<id>jboss.releases</id>
-			<name>JBoss releases</name>
-			<url>http://repository.jboss.org/maven2</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
+		<!-- <repository> <id>jboss.releases</id> <name>JBoss releases</name> <url>http://repository.jboss.org/maven2</url> <releases> <enabled>true</enabled> 
+			</releases> <snapshots> <enabled>false</enabled> </snapshots> </repository> -->
 		<repository>
 			<id>javageomodel-repo</id>
 			<name>GeocellJava Repository</name>
@@ -639,10 +674,10 @@
 			<url>http://www.springbyexample.org/maven/repo</url>
 		</repository>
 		<repository>
-            <id>objectdb</id>
-            <name>ObjectDB Repository</name>
-            <url>http://m2.objectdb.com</url>
-        </repository>
+			<id>objectdb</id>
+			<name>ObjectDB Repository</name>
+			<url>http://m2.objectdb.com</url>
+		</repository>
 	</repositories>
 
 	<scm>
