Changed the versioning in the poms to use one property.
git-svn-id: http://ikube.googlecode.com/svn/trunk@468 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -8,12 +8,12 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-core</artifactId>
 	<packaging>jar</packaging>
-	<version>1.5.0</version>
+	<version>${ikube.version}</version>
 
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>1.5.0</version>
+		<version>${ikube.version}</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
