--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -11,12 +11,12 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-war</artifactId>
 	<packaging>war</packaging>
-	<version>1.5.0</version>
+	<version>${ikube.version}</version>
 
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>1.5.0</version>
+		<version>${ikube.version}</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
