Updated the poms.
git-svn-id: http://ikube.googlecode.com/svn/trunk@469 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube</artifactId>
 	<packaging>pom</packaging>
-	<version>${ikube.version}</version>
+	<version>1.8.0</version>
 
 	<properties>
 		<ikube.version>1.8.0</ikube.version>
