--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -8,12 +8,12 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-core</artifactId>
 	<packaging>jar</packaging>
-	<version>${ikube.version}</version>
+	<version>1.8.0</version>
 
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>${ikube.version}</version>
+		<version>1.8.0</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
