--- a/build.properties
+++ b/build.properties
@@ -3,6 +3,8 @@ project.name=ikube
 project.version=1.8
 ikube.war=ikube.war
 
+sleep=15
+
 target.directory=code/war/target
 core.target.directory=code/core/target
 
