--- a/build.xml
+++ b/build.xml
@@ -13,19 +13,18 @@
 			<param name="tomcat.bin" value="${tomcat.1.bin}" />
 			<param name="tomcat.home" value="${tomcat.1}" />
 		</antcall>
-		<!-- sleep seconds="10" />
+		<sleep seconds="${sleep}" />
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.2.bin}" />
 			<param name="tomcat.home" value="${tomcat.2}" />
 		</antcall>
-		<sleep seconds="10" />
+		<sleep seconds="${sleep}" />
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.3.bin}" />
 			<param name="tomcat.home" value="${tomcat.3}" />
 		</antcall>
-		<sleep seconds="10" / -->
 	</target>
 	<target name="stop">
 		<antcall target="executeTomcatAction">
