Updated the cluster logic.
git-svn-id: http://ikube.googlecode.com/svn/trunk@477 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -6,17 +6,17 @@ delay=60000
 period=60000
 
 # The number of threads for each indexing component
-table.handler.threads=5
-internet.handler.threads=10
+table.handler.threads=3
+internet.handler.threads=3
 filesystem.handler.threads=3
-email.handler.threads=3
+email.handler.threads=1
 
 # These parameters are for the web services
-service.protocol=http
-service.port=8081
-monitoring.service.port=8082
-web.service.path=/ikube/service/ISearcherWebService?wsdl
-monitoring.service.path=/ikube/service/IMonitorWebService?wsdl
+# service.protocol=http
+# service.port=8081
+# monitoring.service.port=8082
+# web.service.path=/ikube/service/ISearcherWebService?wsdl
+# monitoring.service.path=/ikube/service/IMonitorWebService?wsdl
 
 # These parameters are for the Ikube documentation index
 ikube.url=http://localhost/ikube/index.html
