Changing the crawler to use Jpa for the persistence.
git-svn-id: http://ikube.googlecode.com/svn/trunk@479 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -4,16 +4,16 @@
 max.age=600
 
 # These parameters are destined for the index context
-buffer.size=128
+buffer.size=256
 compound.file=true
 merge.factor=1000
 buffered.docs=1000
-max.field.length=10000
+max.field.length=1000
 max.read.length=10000000
 index.directory.path=D:/cluster/indexes
 index.directory.path.backup=D:/cluster/indexes/backup
-jdbc.batch.size=10000
-internet.batch.size=100
+jdbc.batch.size=1000
+internet.batch.size=25
 throttle=0
 
 # These parameters are client specific
@@ -36,3 +36,9 @@ jdbc.maxPoolSize=100
 jdbc.maxStatements=10000
 jdbc.checkOutTimeout=360000000
 jdbc.numHelperThreads=5
+
+# The number of threads for each indexing component
+table.handler.threads=5
+internet.handler.threads=5
+filesystem.handler.threads=3
+email.handler.threads=1
