Continued implementing the Jpa persistence for the handlers.
git-svn-id: http://ikube.googlecode.com/svn/trunk@485 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -1,7 +1,7 @@
 ## This file should be modified by clients ##
 
-# Ten hours, defined in minutes
-max.age=600
+# Ten hours or one day, depends, defined in minutes
+max.age=1440
 
 # These parameters are destined for the index context
 buffer.size=256
@@ -14,6 +14,7 @@ index.directory.path=D:/cluster/indexes
 index.directory.path.backup=D:/cluster/indexes/backup
 jdbc.batch.size=10000
 internet.batch.size=10
+file.batch.size=100
 throttle=0
 
 # These parameters are client specific
@@ -39,6 +40,6 @@ jdbc.numHelperThreads=5
 
 # The number of threads for each indexing component
 table.handler.threads=3
-internet.handler.threads=1
+internet.handler.threads=5
 filesystem.handler.threads=3
 email.handler.threads=1
