--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,39 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>openjpa-maven-plugin</artifactId>
+				<version>1.2</version>
+				<configuration>
+					<includes>ikube/model/*.class,ikube/model/**/*.class</includes>
+					<addDefaultConstructor>true</addDefaultConstructor>
+					<enforcePropertyRestrictions>true</enforcePropertyRestrictions>
+					<!-- Pass additional properties to the Plugin here -->
+					<!-- <toolProperties>
+						<property>
+							<name>directory</name>
+							<value>otherdirectoryvalue</value>
+						</property>
+					</toolProperties> -->
+				</configuration>
+				<executions>
+					<execution>
+						<id>enhancer</id>
+						<phase>process-classes</phase>
+						<goals>
+							<goal>enhance</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.openjpa</groupId>
+						<artifactId>openjpa</artifactId>
+						<version>2.1.0</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -638,6 +671,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<!-- <dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>eclipselink</artifactId>
+			<version>2.0.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency> -->
 	</dependencies>
 
 	<repositories>
@@ -686,6 +726,12 @@
 			<id>objectdb</id>
 			<name>ObjectDB Repository</name>
 			<url>http://m2.objectdb.com</url>
+		</repository>
+		<repository>
+			<id>EclipseLink Repo</id>
+			<!-- note that ampersands in this URL are escaped because this is in an xml file - un-escape them to use in browser -->
+			<url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/rt/eclipselink/maven.repo</url>
+			<!-- use this for javax.persistence <snapshots> <enabled>true</enabled> </snapshots> -->
 		</repository>
 	</repositories>
 
