Parameterized the index context.
git-svn-id: http://ikube.googlecode.com/svn/trunk@487 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -20,7 +20,7 @@ throttle=0
 # These parameters are client specific
 url=http://ikokoon.ikube.cloudbees.net/index.html
 url.million=http://localhost:9000/million/adapt.html
-faq.predicate=where faq.faqid < 100000000 and published = 1
+faq.predicate=where faq.faqid < 100000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=D:/apache-tomcat-6.0.26
