--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -17,6 +17,16 @@ internet.batch.size=10
 file.batch.size=500
 throttle=0
 
+db2.jdbc.userid=db2admin
+db2.jdbc.password=db2admin
+db2.jdbc.url=jdbc:db2://ikube.dyndns.org:50000/ikube
+db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
+
+oracle.jdbc.userid=XE
+oracle.jdbc.password=admin
+oracle.jdbc.url=jdbc:oracle:thin:@//ikube.dyndns.org:1521/XE
+oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
+
 # These parameters are client specific
 url=http://ikokoon.ikube.cloudbees.net/index.html
 url.million=http://localhost:9000/million/adapt.html
@@ -40,6 +50,6 @@ jdbc.numHelperThreads=5
 
 # The number of threads for each indexing component
 table.handler.threads=3
-internet.handler.threads=5
-filesystem.handler.threads=4
+internet.handler.threads=3
+filesystem.handler.threads=3
 email.handler.threads=1
