--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -19,3 +19,8 @@ ikube.url.9000=http://localhost:9000/ikube/index.html
 ikube.url.dyndns=http://ikube.dyndns.org:8080/ikube/index.html
 
 not.stored=false
+
+h2.jdbc.userid=sa
+h2.jdbc.password=
+h2.jdbc.driver=org.h2.Driver
+h2.jdbc.url=jdbc:h2:file:ikube
