Updated some configuration.
git-svn-id: http://ikube.googlecode.com/svn/trunk@489 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -1,7 +1,7 @@
 ## This file should be modified by clients ##
 
 # Ten hours or one day, depends, defined in minutes
-max.age=1440
+max.age=600
 
 # These parameters are destined for the index context
 buffer.size=256
@@ -19,12 +19,12 @@ throttle=0
 
 db2.jdbc.userid=db2admin
 db2.jdbc.password=db2admin
-db2.jdbc.url=jdbc:db2://ikube.dyndns.org:50000/ikube
+db2.jdbc.url=jdbc:db2://ikube:50000/ikube
 db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
 
 oracle.jdbc.userid=XE
 oracle.jdbc.password=admin
-oracle.jdbc.url=jdbc:oracle:thin:@//ikube.dyndns.org:1521/XE
+oracle.jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
 oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
 # These parameters are client specific
