--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -24,3 +24,9 @@ h2.jdbc.userid=sa
 h2.jdbc.password=
 h2.jdbc.driver=org.h2.Driver
 h2.jdbc.url=jdbc:h2:file:ikube
+
+ikube.dataSource=nonXaDataSourceH2
+ikube.persistenceUnit=IkubePersistenceUnitH2
+ikube.dataSourceType=H2
+ikube.jdbc.url=jdbc:h2:file:ikube
+ikube.jdbc.driver=org.h2.Driver
