Updated the crawler and introduced a cache.
git-svn-id: http://ikube.googlecode.com/svn/trunk@491 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -25,8 +25,10 @@ h2.jdbc.password=
 h2.jdbc.driver=org.h2.Driver
 h2.jdbc.url=jdbc:h2:file:ikube
 
-ikube.dataSource=nonXaDataSourceH2
-ikube.persistenceUnit=IkubePersistenceUnitH2
-ikube.dataSourceType=H2
-ikube.jdbc.url=jdbc:h2:file:ikube
-ikube.jdbc.driver=org.h2.Driver
+ikube.dataSource=nonXaDataSourceDb2
+ikube.persistenceUnit=IkubePersistenceUnitDb2
+ikube.dataSourceType=DB2
+ikube.jdbc.userid=db2admin
+ikube.jdbc.password=db2admin
+ikube.jdbc.url=jdbc:db2://ikube:50000/ikube
+ikube.jdbc.driver=com.ibm.db2.jcc.DB2Driver
