--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -13,7 +13,7 @@ max.read.length=10000000
 index.directory.path=D:/cluster/indexes
 index.directory.path.backup=D:/cluster/indexes/backup
 jdbc.batch.size=10000
-internet.batch.size=10
+internet.batch.size=500
 file.batch.size=500
 throttle=0
 
@@ -30,11 +30,12 @@ oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 # These parameters are client specific
 url=http://ikokoon.ikube.cloudbees.net/index.html
 url.million=http://localhost:9000/million/adapt.html
-faq.predicate=where faq.faqid < 100000 and published = 1
+faq.predicate=where faq.faqid < 100000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=D:/apache-tomcat-6.0.26
 files.excluded.pattern=.*(.svn).*|.*(database).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.zip).*|.*(.jar).*|.*(.exe).*|.*(.dll).*|.*(.war).*|.*(.dtd).*|.*(.jsp).*
+internet.excluded.pattern=.*(.zip).*|.*(.png).*
 
 # These are client specific for Lucene
 analyzed=true
