--- a/pom.xml
+++ b/pom.xml
@@ -74,24 +74,6 @@
 					</execution>
 				</configuration>
 			</plugin>
-			<!-- <plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>properties-maven-plugin</artifactId>
-				<version>1.0-alpha-2</version>
-				<executions>
-					<execution>
-						<phase>initialize</phase>
-						<goals>
-							<goal>read-project-properties</goal>
-						</goals>
-						<configuration>
-							<files>
-								<file>build.properties</file>
-							</files>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin> -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jdepend-maven-plugin</artifactId>
@@ -113,7 +95,6 @@
 							<file>libs/canyon-0.9.8.jar</file>
 						</configuration>
 					</execution>
-
 					<execution>
 						<id>install-db2-driver</id>
 						<phase>compile</phase>
@@ -146,13 +127,6 @@
 					<includes>ikube/model/*.class,ikube/model/**/*.class</includes>
 					<addDefaultConstructor>true</addDefaultConstructor>
 					<enforcePropertyRestrictions>true</enforcePropertyRestrictions>
-					<!-- Pass additional properties to the Plugin here -->
-					<!-- <toolProperties>
-						<property>
-							<name>directory</name>
-							<value>otherdirectoryvalue</value>
-						</property>
-					</toolProperties> -->
 				</configuration>
 				<executions>
 					<execution>
@@ -310,9 +284,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- <dependency> <groupId>org.apache.tiles</groupId> <artifactId>com.springsource.org.apache.tiles</artifactId> <version>${tiles.version}</version> 
-			<scope>compile</scope> </dependency> <dependency> <groupId>org.apache.tiles</groupId> <artifactId>com.springsource.org.apache.tiles.core</artifactId> 
-			<version>${tiles.version}</version> <scope>compile</scope> </dependency> -->
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>com.springsource.org.apache.tiles.jsp</artifactId>
@@ -381,8 +352,6 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<!-- <dependency> <groupId>aspectj</groupId> <artifactId>aspectjweaver</artifactId> <version>1.5.3</version> <type>jar</type> <scope>compile</scope> 
-			</dependency> -->
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib-nodep</artifactId>
@@ -466,8 +435,6 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<!-- <dependency> <groupId>org.neodatis.odb</groupId> <artifactId>neodatis-odb</artifactId> <version>1.9.21.679</version> <type>jar</type> 
-			<scope>compile</scope> </dependency> -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -593,16 +560,12 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!-- <dependency>
-			<groupId>com.hazelcast</groupId>
-			<artifactId>hazelcast</artifactId>
-			<version>1.9</version>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache-openjpa</artifactId>
+			<version>0.2.0</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency> -->
-		<!-- <dependency> <groupId>net.sf.ehcache</groupId> <artifactId>ehcache-openjpa</artifactId> <version>0.2.0</version> <type>jar</type> <scope>compile</scope> 
-			</dependency> -->
-		<!-- <dependency> <groupId>org.neodatis</groupId> <artifactId>neodatis-odb</artifactId> <version>1.9-beta-1</version> <type>jar</type> <scope>compile</scope> 
-			</dependency> -->
 		<dependency>
 			<groupId>com.beoui</groupId>
 			<artifactId>geocell</artifactId>
@@ -648,9 +611,6 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<!-- <dependency> <groupId>it.assist.jrecordbind</groupId> <artifactId>jrecordbind-java5</artifactId> <version>2.3.3</version> <scope>compile</scope> 
-			</dependency> <dependency> <groupId>net.sf.flatpack</groupId> <artifactId>flatpack</artifactId> <version>3.1.1</version> <scope>compile</scope> 
-			</dependency> -->
 		<dependency>
 			<groupId>canyon</groupId>
 			<artifactId>canyon</artifactId>
@@ -671,13 +631,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>eclipselink</artifactId>
-			<version>2.0.0</version>
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache-core</artifactId>
+			<version>2.4.2</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency> -->
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -705,8 +665,6 @@
 			<name>Java.net Maven2 Repository</name>
 			<url>http://download.java.net/maven/2</url>
 		</repository>
-		<!-- <repository> <id>jboss.releases</id> <name>JBoss releases</name> <url>http://repository.jboss.org/maven2</url> <releases> <enabled>true</enabled> 
-			</releases> <snapshots> <enabled>false</enabled> </snapshots> </repository> -->
 		<repository>
 			<id>javageomodel-repo</id>
 			<name>GeocellJava Repository</name>
