--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -15,6 +15,7 @@ index.directory.path.backup=D:/cluster/indexes/backup
 jdbc.batch.size=10000
 internet.batch.size=500
 file.batch.size=500
+file.max.read.length=10000000
 throttle=0
 
 db2.jdbc.userid=db2admin
@@ -29,13 +30,14 @@ oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
 # These parameters are client specific
 url=http://ikokoon.ikube.cloudbees.net/index.html
-url.million=http://localhost:9000/million/adapt.html
-faq.predicate=where faq.faqid < 10000 and published = 1
+url.million=http://localhost:8080/million/adapt.html
+url.falcon.million=http://falcon:9000/million/adapt.html
+faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=D:/apache-tomcat-6.0.26
 files.excluded.pattern=.*(.svn).*|.*(database).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.zip).*|.*(.jar).*|.*(.exe).*|.*(.dll).*|.*(.war).*|.*(.dtd).*|.*(.jsp).*
-internet.excluded.pattern=.*(.zip).*|.*(.png).*
+internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*
 
 # These are client specific for Lucene
 analyzed=true
@@ -51,6 +53,6 @@ jdbc.numHelperThreads=5
 
 # The number of threads for each indexing component
 table.handler.threads=3
-internet.handler.threads=3
+internet.handler.threads=10
 filesystem.handler.threads=3
 email.handler.threads=1
