--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -5,30 +5,32 @@ delay=60000
 # The period between notifications for timed tasks
 period=60000
 
-# These parameters are for the web services
-# service.protocol=http
-# service.port=8081
-# monitoring.service.port=8082
-# web.service.path=/ikube/service/ISearcherWebService?wsdl
-# monitoring.service.path=/ikube/service/IMonitorWebService?wsdl
-
 # These parameters are for the Ikube documentation index
 ikube.url=http://localhost/ikube/index.html
 ikube.url.8080=http://localhost:8080/ikube
 ikube.url.9000=http://localhost:9000/ikube/index.html
 ikube.url.dyndns=http://ikube.dyndns.org:8080/ikube/index.html
+ikube.google.code=http://code.google.com/p/ikube/
 
 not.stored=false
 
 h2.jdbc.userid=sa
 h2.jdbc.password=
-h2.jdbc.driver=org.h2.Driver
 h2.jdbc.url=jdbc:h2:file:ikube
+h2.jdbc.driver=org.h2.Driver
 
-ikube.dataSource=nonXaDataSourceDb2
-ikube.persistenceUnit=IkubePersistenceUnitDb2
-ikube.dataSourceType=DB2
-ikube.jdbc.userid=db2admin
-ikube.jdbc.password=db2admin
-ikube.jdbc.url=jdbc:db2://ikube:50000/ikube
-ikube.jdbc.driver=com.ibm.db2.jcc.DB2Driver
+ikube.dataSource=nonXaDataSourceH2
+ikube.persistenceUnit=IkubePersistenceUnitH2
+ikube.dataSourceType=H2
+ikube.jdbc.userid=sa
+ikube.jdbc.password=
+ikube.jdbc.url=jdbc:h2:file:ikube
+ikube.jdbc.driver=org.h2.Driver
+
+# ikube.dataSource=nonXaDataSourceDb2
+# ikube.persistenceUnit=IkubePersistenceUnitDb2
+# ikube.dataSourceType=DB2
+# ikube.jdbc.userid=db2admin
+# ikube.jdbc.password=db2admin
+# ikube.jdbc.url=jdbc:db2://ikube:50000/ikube
+# ikube.jdbc.driver=com.ibm.db2.jcc.DB2Driver
