--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
 			<param name="tomcat.bin" value="${tomcat.1.bin}" />
 			<param name="tomcat.home" value="${tomcat.1}" />
 		</antcall>
-		<sleep seconds="${sleep}" />
+		<!-- sleep seconds="${sleep}" />
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.2.bin}" />
@@ -24,7 +24,7 @@
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.3.bin}" />
 			<param name="tomcat.home" value="${tomcat.3}" />
-		</antcall>
+		</antcall -->
 	</target>
 	<target name="stop">
 		<antcall target="executeTomcatAction">
