Added another rule to check for newer indexes. Updated the JavaDoc.
git-svn-id: http://ikube.googlecode.com/svn/trunk@499 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -1,7 +1,6 @@
 ## This file should be modified by clients ##
-
-# Ten hours or one day, depends, defined in minutes
-max.age=600
+# Maximum age of the indexes defined in minutes
+max.age=180
 
 # These parameters are destined for the index context
 buffer.size=256
@@ -18,15 +17,35 @@ file.batch.size=500
 file.max.read.length=10000000
 throttle=0
 
+# These are client specific for Lucene
+analyzed=true
+stored=true
+vectored=true
+
+# The DB2 datasource credentials
 db2.jdbc.userid=db2admin
 db2.jdbc.password=db2admin
 db2.jdbc.url=jdbc:db2://ikube:50000/ikube
 db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
 
+# The Oracle datasource credentials
 oracle.jdbc.userid=XE
 oracle.jdbc.password=admin
 oracle.jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
 oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
+
+#General JDBC settings
+jdbc.minPoolSize=10
+jdbc.maxPoolSize=100
+jdbc.maxStatements=1000
+jdbc.checkOutTimeout=360000000
+jdbc.numHelperThreads=5
+
+# The number of threads for each indexing component/connector
+table.handler.threads=3
+internet.handler.threads=3
+filesystem.handler.threads=3
+email.handler.threads=1
 
 # These parameters are client specific
 url=http://ikokoon.ikube.cloudbees.net/index.html
@@ -37,22 +56,4 @@ patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=D:/apache-tomcat-6.0.26
 files.excluded.pattern=.*(.svn).*|.*(database).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.zip).*|.*(.jar).*|.*(.exe).*|.*(.dll).*|.*(.war).*|.*(.dtd).*|.*(.jsp).*
-internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*
-
-# These are client specific for Lucene
-analyzed=true
-stored=true
-vectored=true
-
-#General JDBC settings
-jdbc.minPoolSize=10
-jdbc.maxPoolSize=100
-jdbc.maxStatements=100
-jdbc.checkOutTimeout=360000000
-jdbc.numHelperThreads=5
-
-# The number of threads for each indexing component
-table.handler.threads=3
-internet.handler.threads=10
-filesystem.handler.threads=3
-email.handler.threads=1
+internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*
