--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 		<encoding>UTF-8</encoding>
 		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
 
-		<write.classes>-Dwrite.classes=false</write.classes>
-		<clean.classes>-Dclean.classes=false</clean.classes>
+		<write.classes>-Dwrite.classes=true</write.classes>
+		<clean.classes>-Dclean.classes=true</clean.classes>
 		<included.packages>-Dincluded.packages=ikube</included.packages>
 		<excluded.packages>-Dexcluded.packages=model:Mock:Test:jpa</excluded.packages>
 		<included.adapters>-Dincluded.adapters=coverage:complexity:dependency</included.adapters>
