Fiddling with the rules again. Still have some un-usual state combinations in the cluster. Seems to be sorted now.
git-svn-id: http://ikube.googlecode.com/svn/trunk@503 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -1,10 +1,10 @@
 ## This file should be modified by clients ##
 # Maximum age of the indexes defined in minutes
-max.age=360
+max.age=600
 
 # These parameters are destined for the index context
 buffer.size=256
-compound.file=true
+compound.file=false
 merge.factor=1000
 buffered.docs=1000
 max.field.length=1000
