--- a/code/core/src/main/resources/META-INF/log4j.properties
+++ b/code/core/src/main/resources/META-INF/log4j.properties
@@ -36,3 +36,4 @@ log4j.category.org.apache.jcs.auxiliary.lateral=DEBUG
 
 log4j.category.ikube=INFO
 log4j.category.ikube.toolkit=INFO
+log4j.category.ikube.action.rule=DEBUG
