Updated a few tests, added a test and mocked some other tests.
git-svn-id: http://ikube.googlecode.com/svn/trunk@504 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -22,3 +22,6 @@ tomcat.3.webapps=${tomcat.3}/webapps
 tomcat.1.bin=${tomcat.1}/bin
 tomcat.2.bin=${tomcat.2}/bin
 tomcat.3.bin=${tomcat.3}/bin
+
+jenkins.home=D:/apache-tomcat-6.0.26
+jenkins.bin=${jenkins.home}/bin
