--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -68,7 +68,7 @@
 							<argLine>-javaagent:../../serenity/serenity.jar -Xms1024m -Xmx4096m -XX:PermSize=256m -XX:MaxPermSize=512m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
 							<excludes>
 								<exclude>**/TextParserTest.java</exclude>
-								<exclude>**/DataBaseJpaTest.java</exclude>
+								<!-- <exclude>**/DataBaseJpaTest.java</exclude> -->
 							</excludes>
 						</configuration>
 					</execution>
